leave some message

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- step one, set up header, links, and scripts -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,10 +58,10 @@
     </main>
 
     <!--Container-->
-    <div class="container col col-xs-6 col-sm-6 col-md-8 col-lg-8 text-center">
+    <div class="container col col-md-9 offset-md-3 px-0 text-center">
         <div id="skills">
             <h2>Skills</h2>
-            <div class="row">
+            <div class="row m-0">
                 <div class="col col-sm-4 col-md-2 col-lg-2 center">
                     <img style="width: 100px;" src="./assets/html.png" alt="">
                 </div>
@@ -102,24 +102,31 @@
             </div>
         </div>
 
-        <div id="contact">
-            <h2>Contact</h2>
-            <div id="contactSM" class="row center">
-                <div class="col-lg-2">
-                <a href="https://www.linkedin.com/in/guillermo-cabral-b24920186/" target="blank" title="Image from freeiconspng.com">
-                    <img src="./assets/linkedinIcon.png" width="50" alt="LinkedinIcon"/>
-                </a></div>
-                <div class="col-lg-2">
-                <a href="https://twitter.com/GuillermoECabr1" target="blank" title="Image from freeiconspng.com">
-                    <img src="./assets/twitterIcon.png" width="50" alt="TwitterIcon"/>
-                </a></div>
-                <div class="col-lg-2">
-                <a href="https://github.com/GuilleCabral" target="blank" title="Image from freeiconspng.com">
-                    <img src="./assets/githubIcon.png" width="50" alt="GithubIcon"/>
-                </a></div>
+        <h2>Contact</h2>
+        <div class="container">
+            <div id="contact" class="d-flex">
+
+                <div class="col col-sm-2 col-md-2 col-lg-2">
+                    <a href="https://www.linkedin.com/in/guillermo-cabral-b24920186/" target="blank" title="Image from freeiconspng.com">
+                        <img src="./assets/linkedinIcon.png" width="50" class="img-responsive center-block d-block mx-auto" alt="LinkedinIcon"/>
+                    </a>
+                </div>
+
+                <div class="col col-sm-2 col-md-2 col-lg-2 ">
+                    <a href="https://twitter.com/GuillermoECabr1" target="blank" title="Image from freeiconspng.com">
+                        <img src="./assets/twitterIcon.png" width="50" class="img-responsive center-block d-block mx-auto" alt="TwitterIcon"/>
+                    </a>
+                </div>
+
+                <div class="col col-sm-2 col-md-2 col-lg-2">
+                    <a href="https://github.com/GuilleCabral" target="blank" title="Image from freeiconspng.com">
+                        <img src="./assets/githubIcon.png" width="50" class="img-responsive center-block d-block mx-auto" alt="GithubIcon"/>
+                    </a>
+                </div>
 
             </div>
         </div>
+
     </div>
 
     <!--scripts -->
