leave some message

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
         <div id="projects">
             <h2>Projects</h2>
             
-                <a target="blank" style="text-decoration : none" href="https://guillecabral.github.io/ProductLandingPage/"> Product Landing page</a>
-            
+                <a target="blank" style="text-decoration : none" href="https://guillecabral.github.io/ProductLandingPage/"> Product Landing page</a><br>
+                <a target="blank" style="text-decoration : none" href="https://guillecabral.github.io/AboutMePage/"> About Me page</a><br>
+                <a target="blank" style="text-decoration : none" href="https://guillecabral.github.io/madlibs/"> Mad Libs</a>
+
         </div>
 
         <div id="education">
