--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                     <img style="width: 82px;" src="./assets/c++.png" alt=""><br><br>C++
                 </div>
                 <div class="col col-sm-4 col-md-2 col-lg-2 center">
-                    <img style="width: 82px;" src="./assets/react.png" alt=""><br><br>REACT
+                    <img style="width: 82px;" src="./assets/React.png" alt=""><br><br>REACT
                 </div>
                 <div class="col col-sm-4 col-md-2 col-lg-2 center">
-                    <img style="width: 150px;" src="./assets/node.jpg" alt=""><br><br>NODE
+                    <img style="width: 150px;" src="./assets/Node.jpg" alt=""><br><br>NODE
                 </div>              
             </div>
         </div>
