--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div style="display: flex; align-items: center;">
                     <a target="blank" href="https://guillecabral.github.io/petStoreG/">
-                        <img src="./assets/PetSt.png" style="width: 10em; border: 2px solid rgb(216, 84, 84); margin: 0 1em 1em;" alt="Pet-Store">
+                        <img src="./assets/petSt.png" style="width: 10em; border: 2px solid rgb(216, 84, 84); margin: 0 1em 1em;" alt="Pet-Store">
                     </a>
                     <p>Pet Store</p>
                 </div>
